[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Sample notebook"
authors = ["Samuel Meuli <me@samuelmeuli.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
